<?xml version="1.0" encoding="utf-8"?><resources>    <string name="app_name">7Test</string>    <string name="app_description">Seven Networks</string>    <string name="activity_main">Main tab</string>    <string name="activity_manage_tests">Test suites available on SD card</string>    <string name="activity_test_info">Test info - press \'Menu\' for more options</string>    <string name="ChangeProxy">Change proxy</string>    <string name="btnLoadTest">Load test</string>    <string name="btnUnLoadTest">Unload test</string>    <string name="btnMoreRequest">Request options …</string>    <string name="btnMoreResponse">Response options …</string>    <string name="btnRequest">Single request</string>    <string name="btnRequestWithInterval">Periodic requests</string>    <string name="btnLoopedRequest">Looped requests</string>    <string name="btnAutomatedTest">Automated test</string>    <string name="btnStopSending">Stop</string>    <string name="btnSaveTest">Save test</string>    <string name="btnTestDatabase">Test Sqlite</string>    <string name="btnTestDatabase2">Test Sqlite 2</string>    <string name="btnRenameTest">Rename test</string>    <string name="chbxKeepAlive">Keep-Alive</string>    <string name="chbx100Continue">100-Continue</string>    <string name="chbxWiFi">WiFi</string>    <string name="chbxAirplane">Airplane mode</string>    <string name="chbxChunkedResponse">Chunked</string>    <string name="chbxTimeout">Use server timeout</string>    <string name="chbxResponseContent">With content</string>    <string name="itmDeleteLog">Delete Log</string>    <string name="itmShowTests">Show tests from SD</string>    <string name="itmLoadTest">Load test</string>    <string name="itmLoadAutomatedTests">Reload test package</string>    <string name="itmStopRunningTests">Stop running tests</string>    <string name="itmRefreshResults">Clear results</string>    <string name="itmFlushResults">Clear results</string>    <string name="itmSetupTestrunnerServer">Select testrunner</string>    <string name="itmAddNewBranding">Add Branding Target</string>    <string name="itmAddBrandingProperty">Add Branding Property</string>    <string name="itmLoadTests">Show tests</string>    <string name="itmLoadScopes">Show scopes</string>    <string name="itmUnLoadTests">Unload test</string>    <string name="itmSaveTest">Save</string>    <string name="itmSaveTest2">Save as…</string>    <string name="itmRenameTest">Rename</string>    <string name="itmRefresh">Refresh list</string>    <string name="itmResetStat">Reset statistics</string>    <string name="itmInvalidateAll">Invalidate cache</string>    <string name="itmChangeRelay">Change relay</string>    <string name="lblBuild">Build.MODEL:</string>    <string name="lblConnectionType">Conn. type:</string>    <string name="lblconstConnectionStatus">Status:</string>    <string name="lblconstConnectionState">State:</string>    <string name="lblConnectionActivity">Activity:</string>    <string name="lblUri">URI:</string>    <string name="lblTimers">Intervals:</string>    <string name="lblTimer">Curr:</string>    <string name="lblprevTimer">Prev:</string>    <string name="lblInterval">Pattern:</string>    <string name="lblTest">Test:</string>    <string name="lblSetResponseContentLength">Response content length (bytes):</string>    <string name="lblSetStatusCode">Response status code:</string>    <string name="lblLoadedRequests">Requests:</string>    <string name="lblLoadedRequestsCurrent">Current:</string>    <string name="lblResponseMD5">Last response md5 (status code + content):</string>    <string name="textViewTestReterations">Reiterations:</string>    <string name="textViewDelay">Delay:</string>    <string-array name="method_array">        <item>GET</item>        <item>POST</item>        <item>PUT</item>        <item>DELETE</item>        <item>HEAD</item>    </string-array>    <string name="buttonPreviousRequest">Previous request</string>    <string name="ButtonNextRequest">Next request</string>    <string name="ButtonReset">Reset</string>    <string name="ButtonShowRequest">Edit request</string>    <string name="ButtonPreviousPattern">Previous pattern</string>    <string name="ButtonNextPattern">Next pattern</string>    <string name="smokeTestsHeader">Test suite:</string>    <string name="smokeTestsButtonStart">Start</string>    <string name="smokeTestsButtonCheck">Checking…</string>    <string name="smokeTestsButtonRunning">Running…</string>    <string name="addBranding">Add Branding Target</string>    <string name="addOCConfig">Add OC config</string>    <string name="allTest">Select all tests</string>    <string name="ocConfig">OC Configuration</string>    <string name="brandingName">Branding name:</string>    <string name="relayHost">Relay host:</string>    <string name="relayPort">Relay port:</string>    <string name="redirect1Host">Redirection1 host:</string>    <string name="redirect1Port">Redirection1 port:</string>    <string name="addDefaultBranding">Chose default branding</string>    <string name="saveBranding">Save branding</string>    <string name="testrunner">Testrunner :</string>    <string name="itmOCConfiguration">OC Configuration</string>    <string name="itmHelp">Help</string>    <string name="itmAbout7TestTool">About 7TestTool</string>    <string name="itmAboutLog">About Log</string>    <string name="sBranding">Branding :</string>    <string name="sBrandingInfo">branding does not detect</string>    <string name="sInitialSuite">Environment Certification Suite</string>    <string name="sSmokeSuite">Smoke Test Suite</string>    <string name="sSanitySuite">Sanity Test Suite</string>    <string name="sSelectSuite">Select tests suite</string>    <string name="sSelectOC">Select OC apk</string>    <string-array name="header">        <item>Environment Certification tests</item>        <item>Smoke tests</item>        <item>Sanity tests</item>    </string-array>    <string-array name="suites">        <item>Environment Certification Suite</item>        <item>Smoke Suite</item>        <item>Sanity Suite</item>        <item>Device Certification Suite</item>    </string-array>    <string-array name="smokeChildrenList">        <item>test_001_HttpTrafficLoad - test checks stability HTTP request/response</item>        <item>test_002_HttpsTrafficLoad - test checks stability HTTPS request/response</item>        <item>test_003_HttpRfcCaching - test check http caching by RFC</item>        <item>test_004_IncreasingPolling - test check increasing polling</item>        <item>test_005_HttpRapidManualPolling - test check http RMP</item>        <item>test_006_LongPolling - test check start long polling pattern</item>        <item>test_007_RevalidationClientSide - test check client side revalidation</item>        <item>test_008_InvalidateWithCache - test check cache invalidate with cache</item>        <item>test_009_InvalidateWithoutCache - test check cache invalidate without cache</item>        <item>test_010_NormalizationByUri - test checks uri normalization</item>        <item>test_011_HttpsRfcCaching - test check https caching by RFC</item>        <item>test_012_HttpsRapidManualPolling - test check https RMP</item>        <item>test_013_LargePostHttps1024kb - test check correct response with large body</item>    </string-array>    <string-array name="envChildrenList">        <item>test_001_OCInstall - test checks that OC succesfully installed and started</item>        <item>test_002_MSISDNValidationCheck - test checks that after OC successfully registered with server MSISDN            validation will send        </item>        <item>test_003_FirstPolicyRetrieved - test checks that after success MSISDN validation OC Client send request            for policy update and getting them        </item>        <item>test_004_CRCSRecordsTransfer - test check transferring CRCS records</item>        <item>test_005_HttpRfcCaching - test check caching by RFC for http</item>        <item>test_006_HttpsRfcCaching - test check caching by RFC for https</item>        <item>test_007_HttpRIPolling - test check detection of http RI based polling</item>        <item>test_008_HttpsRIPolling - test check detection of https RI based polling</item>        <item>test_009_InvalidateWithCache - test check cache invalidate with cache</item>        <item>test_010_InvalidateWithoutCache - test check cache invalidate without cache</item>    </string-array>    <string-array name="sanityChildrenList">        <item>test_001_CrashHttpDispatcher</item>        <item>test_002_SocketOpened</item>        <item>test_003_Rfc_CacheControl</item>        <item>test_004_HTTPS_Blacklisted</item>        <item>test_005_HTTPS_NotBlacklisted</item>        <item>test_006_AppByPathOC</item>        <item>test_007_DisabledFailover</item>        <item>test_008_WiFiFailoverActions1</item>        <item>test_009_WiFiFailoverActions2</item>        <item>test_010_RI_WithCrash</item>        <item>test_011_LP_WithTransparent</item>        <item>test_012_PollingsWithInvalidate</item>    </string-array></resources>